--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,8 @@
 {
   "manifest_version": 2,
-
   "name": "Getting started example",
   "description": "This extension shows a Google Image search result for the current page",
   "version": "1.0",
-
   "browser_action": {
     "default_icon": "icon.png",
     "default_popup": "popup.html",
@@ -13,5 +11,11 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/"
+  ],
+  "content_scripts": [
+    {
+      "matches": ["https://www.reddit.com/r/*/comments/*"],
+      "js": ["content_script.js"]
+    }
   ]
 }
